# grokx

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  THIRD-PARTY-NOTICES
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  icons.tsx  main.tsx  styles.css  windowDrag.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: henry.w@example.net  icon.icns
apps/desktop/src-tauri/resources/runtime/: version.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: ComposerInput.tsx  SessionOutline.tsx  SideChat.tsx  StreamReveal.tsx  VirtualChatList.tsx
apps/desktop/src/features/approvals/: index.ts
apps/desktop/src/features/chat/: index.ts
apps/desktop/src/features/diff/: index.ts
apps/desktop/src/features/sessions/: index.ts
apps/desktop/src/features/settings/: index.ts
apps/desktop/src/features/tools/: index.ts
apps/desktop/src/lib/: verbalCompletion.test.ts  verbalCompletion.ts
crates/acp-bridge/: Cargo.toml
crates/acp-bridge/src/: client.rs  lib.rs  map.rs  permission_gate.rs
crates/acp-bridge/tests/: permission_stdio.rs
crates/acp-bridge/tests/fixtures/: fake_agent.py
crates/agent-process/: Cargo.toml
crates/agent-process/src/: lib.rs  resolve.rs  spawn.rs
crates/app-config/: Cargo.toml
crates/app-config/src/: lib.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: lib.rs
crates/app-core/tests/: connect_lists_session.rs
crates/codegen/xai-grok-agent/src/prompt/: context.rs  prompt_encrypted.rs
crates/codegen/xai-grok-config/src/: paths.rs
crates/codegen/xai-grok-pager/: Cargo.toml
crates/codegen/xai-grok-pager-bin/: Cargo.toml
crates/codegen/xai-grok-pager-minimal/src/: live.rs
crates/codegen/xai-grok-pager/assets/logo/: logo05.txt
crates/codegen/xai-grok-pager/docs/user-guide/: 04-slash-commands.md
crates/codegen/xai-grok-pager/src/: client_identity.rs
crates/codegen/xai-grok-pager/src/app/: actions.rs  app_view.rs  event_loop.rs  inline_edit.rs  mod.rs  mouse.rs  screen_mode_relaunch.rs
crates/codegen/xai-grok-pager/src/app/acp_handler/: settings.rs
crates/codegen/xai-grok-pager/src/app/agent_view/: paste.rs  prompt.rs  render.rs
crates/codegen/xai-grok-pager/src/app/dispatch/: ctx.rs  dashboard.rs  mod.rs  prompt.rs
crates/codegen/xai-grok-pager/src/app/effects/: helpers.rs
crates/codegen/xai-grok-pager/src/scrollback/blocks/: user.rs
crates/codegen/xai-grok-pager/src/scrollback/state/: layout.rs  nav.rs  verb_group.rs
crates/codegen/xai-grok-pager/src/settings/: registry.rs
crates/codegen/xai-grok-pager/src/views/: mod.rs  settings_modal.rs
crates/codegen/xai-grok-pager/tests/: settings_e2e.rs
crates/codegen/xai-grok-pager/tests/pty_e2e/: auto_wake_cancel_preserves_queued_user_prompt.rs  basename_path_demo_pty.rs  bash_full_output_double_click_fold_pty.rs  common.rs  critical_announcement_session_banner_pty.rs  drag_autoscroll_no_bounce_pty.rs  drag_from_above_prompt_strip_pty.rs  drag_from_chrome_stays_block_pty.rs  edit_collapsed_oneliner_pty.rs  esc_esc_clears_idle_prompt_and_records_history.rs  managed_policy_gate_refusal_reaches_real_terminal.rs  mid_text_skill_token_echo_styled_pty.rs  nested_quote_drag_copy_excludes_bars_pty.rs  quote_block_drag_copy_excludes_bars_pty.rs  quote_block_raw_mode_copy_keeps_source_pty.rs  reparked_wait_repushes_buried_marker.rs  requirements_version_failure_exits_2_with_guidance.rs  send_then_ctrlc_rewinds_to_composer_no_history_dup.rs  stuck_drag_recovers_on_esc_pty.rs  subscription_watch_and_gate_verify_pty.rs  tab_focuses_scrollback_in_vim_and_default_modes.rs  word_select_tip_on_double_click_pty.rs  wrap_explicit_path_not_found_fails_fast.rs  wrap_not_found_alias_routes_via_shell_contract.rs
crates/codegen/xai-grok-shared/src/: ui_config.rs
crates/codegen/xai-grok-shell/src/agent/: auth_method.rs  config.rs
crates/codegen/xai-grok-shell/src/config/: tests.rs
crates/codegen/xai-grok-tools/src/registry/: types.rs
crates/codegen/xai-grok-workspace/src/permission/: manager.rs  types.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs  permission.rs  prompt.rs  session.rs  tool_call.rs  turn.rs
crates/permissions/: Cargo.toml
crates/permissions/src/: lib.rs
crates/session-store/: Cargo.toml
crates/session-store/src/: lib.rs
docs/: architecture.md  engine-policy.md  release.md  repo-structure.md
docs/adr/: 0001-bundle-engine.md  0002-thin-fork.md  0003-monorepo-layout.md
engine/: README.md  UPSTREAM.md  VERSION
engine/grok-build/crates/codegen/xai-grok-models/: default_models.json
packaging/: README.md  bundle_runtime.sh  version_manifest.json
packaging/linux/: appimage.sh
packaging/macos/: notarize.sh
packaging/windows/: sign.ps1
tests/compatibility/: matrix.toml
tools/: build-engine.sh  dev-bootstrap.sh  pin-engine.sh  sync-upstream.sh
tools/acp-smoke/: Cargo.toml
tools/acp-smoke/src/: main.rs
(+103 files in other folders)
