[package]
name = "app-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Paths, settings, and runtime version metadata"

[dependencies]
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
