[package]
name = "grokx-desktop"
version.workspace = true
description = "grokx desktop shell"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "grokx_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
app-core = { workspace = true }
agent-process = { workspace = true }
app-config = { workspace = true }
domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
mime_guess = { workspace = true }
base64 = { workspace = true }
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
